# resume_bot

./: .gitignore  Dockerfile  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/ai/: graph.py
app/routers/: __init__.py  conversation.py
app/services/: httpx_service.py
k8s/: deployment.yml  service.yml
